--- a/liveboard-2.html
+++ b/liveboard-2.html
@@ -61,7 +61,7 @@
         <span>Liveboard</span>
     </div>
     <div class="iframe-container">
-        <iframe src="https://clearco.thoughtspot.cloud/?embedApp=true#/embed/viz/fb6a661c-9f6d-4dc2-a91d-838a5e55ac5a" title="Interactive Prototype"></iframe>
+        <iframe src="https://clearco.thoughtspot.cloud/#/pinboard/3d22a5d4-7f29-45ca-893a-f9bba64cd5f5" title="Interactive Prototype"></iframe>
     </div>
 </body>
 </html>
