--- a/liveboard-new.html
+++ b/liveboard-new.html
@@ -61,7 +61,7 @@
         <span>Liveboard</span>
     </div>
     <div class="iframe-container">
-        <iframe src="https://clearco.thoughtspot.cloud/?embedApp=true#/embed/viz/e1c5640c-5595-4756-af47-73336b9a20d0" title="Interactive Prototype"></iframe>
+        <iframe src="https://clearco.thoughtspot.cloud/#/pinboard/75e3f988-3659-4c2b-ac40-6eece5c7165d" title="Interactive Prototype"></iframe>
     </div>
 </body>
 </html>
