--- a/liveboard-1.html
+++ b/liveboard-1.html
@@ -61,7 +61,7 @@
         <span>Liveboard</span>
     </div>
     <div class="iframe-container">
-        <iframe src="https://clearco.thoughtspot.cloud/#/pinboard/1193f864-9770-49fd-ae32-b56864512d50/tab/3d059858-8571-4a1c-bcbb-9a4b47741768" title="Interactive Prototype"></iframe>
+        <iframe src="https://clearco.thoughtspot.cloud/?embedApp=true#/embed/viz/1193f864-9770-49fd-ae32-b56864512d50/tab/3d059858-8571-4a1c-bcbb-9a4b47741768" title="Interactive Prototype"></iframe>
     </div>
 </body>
 </html>
