--- a/liveboard-3.html
+++ b/liveboard-3.html
@@ -61,7 +61,7 @@
         <span>Liveboard</span>
     </div>
     <div class="iframe-container">
-        <iframe src="https://clearco.thoughtspot.cloud/#/pinboard/ec58e2e3-65a9-4501-8544-05d567fc1996" title="Interactive Prototype"></iframe>
+        <iframe src="https://clearco.thoughtspot.cloud/?embedApp=true#/embed/viz/ec58e2e3-65a9-4501-8544-05d567fc1996" title="Interactive Prototype"></iframe>
     </div>
 </body>
 </html>
