--- a/liveboard-4.html
+++ b/liveboard-4.html
@@ -61,7 +61,7 @@
         <span>Liveboard</span>
     </div>
     <div class="iframe-container">
-        <iframe src="https://clearco.thoughtspot.cloud/#/pinboard/e37919da-7033-4445-8b23-92647ad0226d" title="Interactive Prototype"></iframe>
+        <iframe src="https://clearco.thoughtspot.cloud/?embedApp=true#/embed/viz/e37919da-7033-4445-8b23-92647ad0226d" title="Interactive Prototype"></iframe>
     </div>
 </body>
 </html>
