--- a/liveboard-5.html
+++ b/liveboard-5.html
@@ -61,7 +61,7 @@
         <span>Liveboard</span>
     </div>
     <div class="iframe-container">
-        <iframe src="https://clearco.thoughtspot.cloud/#/pinboard/07304e9c-ca54-428c-b67b-cac2d5345313" title="Interactive Prototype"></iframe>
+        <iframe src="https://clearco.thoughtspot.cloud/?embedApp=true#/embed/viz/07304e9c-ca54-428c-b67b-cac2d5345313" title="Interactive Prototype"></iframe>
     </div>
 </body>
 </html>
